# cryptenv

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  crypto.rs  main.rs  util.rs
